Lesson#3/ingress-6/flask-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-ingress
spec:
  rules:
  - host: haimbd.com
    http:
      paths:
      - path: /service1
        pathType: Prefix
        backend:
          service:
            name: flask-service
            port:
              number: 80
      - path: /service2
        pathType: Prefix
        backend:
          service:
            name: flask-service
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flask-service
            port:
              number: 80
